--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -17,10 +18,15 @@
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-jest-mock-import-meta": "^1.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
