--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "cp .env.example .env && npm i && npm run migration:run && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -19,10 +19,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "npm run typeorm migration:run -- -d ./src/config/database.ts",
-    "migration:generate": "npm run typeorm -- -d ./src/config/database.ts migration:generate ./src/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/config/database.config.ts",
+    "migration:generate": "npm run typeorm -- -d ./src/config/database.config.ts migration:generate ./src/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- -d ./src/config/database.ts migration:revert"
+    "migration:revert": "npm run typeorm -- -d ./src/config/database.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
